# account-system-webapp

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.env/: .env.dev  .env.test
backend/: pytest.ini
backend/factories/: __init__.py  user_factory.py
backend/project/: asgi.py  urls.py
backend/project/settings/: base.py  dev.py  test.py
backend/users/: apps.py  signals.py  urls.py
backend/users/api/: following.py  token.py  user.py
backend/users/migrations/: 0001_initial.py
backend/users/models/: following.py  profile.py
backend/users/models/extensions/: __init__.py  user_extensions.py
backend/users/serializers/: following_serializer.py  token_serializer.py  user_serializer.py
backend/users/tests/: conftest.py  test_following_api.py  test_models.py  test_user_api.py
compose/local/django/: Dockerfile
frontend/: .env.development  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/components/: user_card.tsx
frontend/lib/: authAxios.ts
frontend/pages/: _app.tsx  index.tsx  login.tsx  signup.tsx
frontend/pages/api/: login.ts  refresh.ts  register.ts  search_profiles.ts  user_profile.ts
frontend/pages/api/following/: index.ts
frontend/pages/api/following/[id]/: unfollow.ts
frontend/public/assets/css/: style.css
frontend/services/: auth.ts  search.ts  serverApiClient.ts
frontend/shared/layout/: auth_layout.tsx  main_layout.tsx  sidebar.tsx
frontend/shared/redux/: reducer.tsx
